spacing fixes

--- a/app/assets/stylesheets/index.css
+++ b/app/assets/stylesheets/index.css
@@ -352,7 +352,7 @@ body {
 }
 
 .beer-lists h3 {
-  text-decoration: underline;
+  margin-top: 10px;
 }
 
 .user-profile h3 {
@@ -367,25 +367,26 @@ body {
   text-decoration: none;
 }
 
-.star-ratings-css {
-  unicode-bidi: bidi-override;
-  color: #c5c5c5;
-  font-size: 25px;
-  height: 25px;
-  width: 100px;
-  margin: 0 auto;
-  position: relative;
-  padding: 0;
-  text-shadow: 0px 1px 0 #a2a2a2;
+.favorite {
+  background: white;
 }
 
-.star-ratings-css-top {
-  color: #e7711b;
-  padding: 0;
-  position: absolute;
-  z-index: 1;
-  display: block;
-  top: 0;
-  left: 0;
-  overflow: hidden;
+.modal-body {
+  text-align: center;
+}
+
+.modal-header h5 {
+  margin: 0 auto;
+}
+
+.list-header h3 {
+  margin-top: 10px;
+}
+
+.search-bar h3 {
+  margin-top: 10px;
+}
+
+.search-text-box {
+  margin-bottom: 5px;
 }
